--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "crypto-js": "^4.2.0",
-    "date-fns": "4.1.0",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.5.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "8.5.1",
@@ -57,9 +57,9 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "pg": "^8.16.0",
-    "react": "^19",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
