--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "crypto-js": "^4.2.0",
@@ -56,6 +57,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
@@ -63,6 +65,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "server-only": "^0.0.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
